--- a/Twitter.App/Views/Home/Index.cshtml
+++ b/Twitter.App/Views/Home/Index.cshtml
@@ -1,31 +1,53 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "All Tweets";
 }
+@using Twitter.App.Models.ViewModels
+@model IEnumerable<TweetIndexViewModel>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+@foreach (var tweet in Model){
+    <div class="row">
+        <div class="col-md-12 thumbnail">
+            <div class="caption">
+                <h3>@tweet.SendOn</h3>
+                <p>@tweet.Content</p>
+                @Html.ActionLink("Favourite", "makeFavourite", "Tweets", new { id = tweet.Id }, new { @class = "btn btn-success" })
+                @Html.ActionLink("Retweet", "retweet", "Tweets", new { id = tweet.Id }, new { @class = "btn btn-success" })
+                @Html.ActionLink("Report", "report", "Tweets", new { id = tweet.Id }, new { @class = "btn btn-danger" })
+                @Html.ActionLink("Reply", "reply", "Tweets", new { id = tweet.Id }, new { @class = "btn btn-success" })
+                @Html.ActionLink("Share", "share", "Tweets", new { id = tweet.Id }, new { @class = "btn btn-success" })
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+}
+<nav>
+    <ul class="pagination">
+        @if (ViewBag.page == 1)
+        {
+            <li class="disabled">@Html.ActionLink("<<", "Index", "Home", new { id = ViewBag.page - 1 }, htmlAttributes: null)</li>
+        }
+        else
+        {
+            <li>@Html.ActionLink("<<", "Index", "Home", new { id = ViewBag.page - 1 }, htmlAttributes: null)</li>
+        }
+        
+        @for (int i = 1; i <= ViewBag.pagesCount; i++)
+        {
+            if (i == ViewBag.page)
+            {
+                <li class="active">@Html.ActionLink(i.ToString(), "Index", "Home", new { id = i }, htmlAttributes: null)</li>
+            }
+            else
+            {
+                <li>@Html.ActionLink(i.ToString(), "Index", "Home", new { id = i }, htmlAttributes: null)</li>
+            }
+        }
+        @if (ViewBag.page == ViewBag.pagesCount)
+        {
+            <li class="disabled">@Html.ActionLink(">>", "Index", "Home", new { id = ViewBag.page + 1 }, htmlAttributes: null)</li>
+        }
+        else
+        {
+            <li>@Html.ActionLink(">>", "Index", "Home", new { id = ViewBag.page + 1 }, htmlAttributes: null)</li>
+        }
+    </ul>
+</nav>
