--- a/Twitter.App/Views/Shared/_LoginPartial.cshtml
+++ b/Twitter.App/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Profile", "profile", "Home", routeValues: new { id = User.Identity.GetUserId() }, htmlAttributes: null )
+            @Html.ActionLink("Profile", "profile", "Users", routeValues: new { id = User.Identity.GetUserId() }, htmlAttributes: null)
         </li>
         <li>
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
