--- a/Twitter.App/Views/Shared/_Layout.cshtml
+++ b/Twitter.App/Views/Shared/_Layout.cshtml
@@ -22,7 +22,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Notifications", "Index", "Notifications")</li>
+                    @if (Request.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Notifications", "Index", "Notifications")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
